--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1053,3 +1053,148 @@ header{
         }
     }
 }
+
+footer{
+    padding-top: 19px;
+
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-stretch:normal;
+    font-variant:normal;
+
+    color: #DEE4EE;
+    background: linear-gradient(180deg, #082A85 0%, #082165 100%);
+    .container{
+        .footer__title{
+            margin-bottom: 24px;
+            font-weight: 500;
+            font-size: 13px;
+            text-transform: uppercase;
+        }
+        .footer__flex-wrap{
+            margin-bottom: 13px;
+            display: flex;
+            .footer__form{
+                display: flex;
+                flex-flow: column nowrap;
+                .footer__form-tel{
+                    margin-bottom: 12px;
+                    border-radius: 5px;
+                    padding: 10px 43px;
+                    font-size: 14px;
+                    text-align: center;
+
+                    background: #FCFBF7;
+                }
+                .footer__form-name{
+                    margin-bottom: 21px;
+                    border-radius: 5px;
+                    padding: 10px 43px;
+                    font-size: 14px;
+                    text-align: center;
+
+                    background: #FCFBF7;
+                }
+                .footer__form-button{
+                    padding: 12px 30px;
+                    border-radius: 10px;
+                    max-width: 256px;
+                    font-weight: 500;
+                    font-size: 15px;
+
+                    color: inherit;
+                    cursor: pointer;
+                    background: linear-gradient(180deg, #5194F6 0%, #0757CD 100%);
+                }
+
+            }
+            .footer__list-flex-wrap{
+                flex: 1 1 auto;
+                display: flex;
+                justify-content: flex-end;
+                .footer__list{
+                    margin-right: 95px;
+                    .footer__list-item{
+                        margin-bottom: 19px;
+                        
+                        .footer__list-item-link{
+                            font-size: 13px;
+                            color:inherit;
+                        }
+                        &:nth-last-child(1){
+                            margin-bottom: 0px;
+                        }
+
+                    }
+                    &:nth-child(1){
+                        max-width: 102px;
+                    }
+                    &:nth-last-child(1){
+                        margin-right: 70px;
+                        max-width: 188px;
+                    }
+
+                }
+            }
+            .footer__location{
+                padding-top: 49px;
+                max-width: 156px;
+                .footer__location-social{
+                    margin-bottom: 22px;
+                    display: flex;
+                    justify-content: flex-end;
+                    .footer__location-social-inst{
+                        margin-right: 13px;
+                    }
+                    .footer__location-social-mail{
+                        margin-right: 13px;
+                    }
+                    // .footer__location-social-teleg{}
+
+                }
+                .footer__location-adress{
+                    margin-bottom: 2px;
+                    font-weight: 500;
+                    font-size: 13px;
+                }
+                .footer__location-map{
+                    text-align: right;
+                    .footer__location-map-link{
+                        font-size: 11px;
+                        text-decoration: underline;
+                        color: inherit;
+                    }
+                }
+            }
+        }
+        .footer__inform{
+            margin-bottom: 17px;
+            display: flex;
+            justify-content: space-between;
+            // .footer__inform-logo{
+            //     .footer__inform-logo-img{}
+            // }
+            .footer__inform-tel{
+                max-width: 127px;
+                font-weight: 600;
+                font-size: 13px;
+
+                p{
+                    &:nth-child(1){
+                        margin-bottom: 3px;
+                    }
+                }
+
+            }
+        }
+    }
+    .footer__line{
+        padding: 7px 0 8px;
+        font-weight: 200;
+        font-size: 14px;
+        text-align: center;
+
+        background: #01094E;
+    }
+}
